--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>No-Mic Typer</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="container"></div>
+        <div class="container">
+            <div class="c-messagebub"></div>
+        </div>
     </body>
 </html>
