--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>No-Mic Typer</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="container">
-            <div class="c-messagebub"></div>
-        </div>
-    </body>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<title>jQuery Auto Update Div with Content from Textarea</title>
+<style>
+    .output{
+        padding: 10px;
+        min-height: 50px;
+        border: 1px solid #e4e4e4;
+    }
+</style>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script>
+$(document).ready(function(){
+    $("#myTextarea").keyup(function(){
+        // Getting the current value of textarea
+        var currentText = $(this).val();
+        
+        // Setting the Div content
+        $(".output").text(currentText);
+    });
+});
+</script>
+</head>
+<body>
+    <form>
+        <textarea id="myTextarea" rows="5" cols="60" placeholder="Type something here..."></textarea>
+    </form>
+    <div class="output"></div>
+</body>
 </html>
