--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>No-Mic Typer</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="container">
-            <div class="c-text"></div>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>No-Mic Typer</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $("#theText").keyup(function(){
+                var currentText = $(this).val();
+                
+                // Setting the Div content
+                $(".output").text(currentText);
+            });
+        });
+    </script>
+</head>
+<body>
+    <div class="container">
+        <div class="c-top">
+            <div class="output"></div>
         </div>
-    </body>
+        <div class="c-bottom">
+            <input type="text" id="theText" placeholder="Type something here..."></input>
+        </div>
+    </div>
+</body>
 </html>
